Updating text/images

--- a/lawwa-web-revised/courses.html
+++ b/lawwa-web-revised/courses.html
@@ -147,8 +147,8 @@
         </section> -->
         <!-- Cta Section End -->
 
-  <section class="cta-section spad set-bg w-100" data-setbg="img/lawwa-img/facial-alt.jpg" 
-    style="display: flex; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto;">
+  <section class="cta-section spad set-bg w-100" data-setbg="img/lawwa-img/img-selection/CoursesBanner-Courses.jpg" 
+    style="display: flex; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto; ">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -183,7 +183,7 @@
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="img/lawwa-img/massage-alt.jpg" alt="Img">
+                        <img src="img/lawwa-img/img-selection/Basic Course - Courses.jpg" alt="Img">
                     </div>
                 </div><!-- .col-md-5 close -->
             </div>
@@ -212,7 +212,7 @@
             <div class="row">
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="img/lawwa-img/treatment-alt.jpg" alt="Img">
+                        <img src="img/lawwa-img/img-selection/Extended Course -Courses.jpg" alt="Img">
                     </div>
                 </div>
 
@@ -250,7 +250,7 @@
               </div><!-- .col-md-7 close -->
               <div class="col-md-5 col-sm-12">
                   <div class="block">
-                      <img src="img/lawwa-img/makeup-alt.jpg" alt="Img">
+                      <img src="img/lawwa-img/img-selection/Other Courses - Courses.JPG" alt="Img">
                   </div>
               </div><!-- .col-md-5 close -->
           </div>
