--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -128,68 +128,8 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="img/lawwa-img/BANNER4NEW.jpg " alt="First slide" style="max-height: inherit;">
-            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
-                    <div class="custom-social">
-                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
-                        <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/facebook logo.png" />
-                          </div>
-                        </a>
-                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
-                          <div class="" style="max-width: 25px; max-height: 25px;" >
-                            <img src="img/lawwa-img/Logo/instagram logo.png" />
-                          </div>
-                        </a>
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/twitter logo.png" />
-                          </div>
-                        </a>
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/mail logo.png" />
-                          </div>
-                        </a>
-                      </div>
-                </div>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <!-- <img class="d-block w-100" src="img/lawwa-img/banner_alt2.jpeg" alt="Second slide" style="max-height: 550px"> -->
-            <img class="d-block w-100" src="img/lawwa-img/newbanner3LADH.JPG" alt="Second slide">
-            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
-                <div class="custom-social">
-                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
-                        <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/facebook logo.png" />
-                          </div>
-                        </a>
-                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/instagram logo.png" />
-                          </div>
-                        </a>
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/twitter logo.png" />
-                          </div>
-                        </a>
-                        <a href="#">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
-                            <img src="img/lawwa-img/Logo/mail logo.png" />
-                          </div>
-                        </a>
-                      </div>
-                </div>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <!-- <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px;"> -->
-            <img class="d-block w-100" src="img/lawwa-img/newbanner2LADH.jpg" alt="Second slide">
+          <div class="carousel-item active"  style="max-height: 550px">
+            <img class="d-block w-100" src="img/lawwa-img/BANNER4NEW.jpg " alt="First slide" >
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
@@ -218,11 +158,9 @@
               </div>
           </div>
           <div class="carousel-item" style="max-height: 550px">
-            <!-- <img class="d-block w-100" src="img/lawwa-img/lawwa_new_banner.jpg" alt="First slide" style="max-height: 550px"> -->
-            <img class="d-block w-100" src="img/lawwa-img/newbanner1LADH.jpg" alt="Fourth slide">
-            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-                <!-- <div class="col-5 col-xl-12 col-lg-12 col-md-6 col-sm-6"> -->
-                  <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+            <img class="d-block w-100" src="img/lawwa-img/newbanner1LADH.jpg" alt="Second slide">
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
                         <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
                           <div class="" style="max-width: 25px; max-height: 25px;">
@@ -249,7 +187,66 @@
                 </div>
               </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item"  style="max-height: 550px">
+            <img class="d-block w-100" src="img/lawwa-img/newbanner3LADH.JPG" alt="Third slide">
+            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
+            <!-- <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px;"> -->
+            <img class="d-block w-100" src="img/lawwa-img/newbanner2LADH.jpg" alt="Fourth slide">
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
             <img class="d-block w-100" src="img/lawwa-img/bannerweb.jpg " alt="Fifth slide" style="max-height: 550px">
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
@@ -340,7 +337,7 @@
           <div class="cs-item">
             <a href="./makeup.html">
             <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/makeup-alt.jpg"></div> -->
-            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/makeupedit.jpg"></div>
+            <div class="cs-pic set-bg" data-setbg="img/lawwa-img/img-selection/MakeUpLanding.jpg"></div>
             <div class="cs-text">
               <h4 class="lawwa-blue-text">Make Up</h4>
             </div>
@@ -403,7 +400,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/lawwa-img/confinement.jpg" alt="" />
+              <img src="img/lawwa-img/img-selection/Services Landing.JPG" alt="" />
               <a href="./services.html">
                 <h3 style="color: rgba(42,56,143,1);">Services</h3>
               </a>
@@ -415,7 +412,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/lawwa-img/massage.jpg" alt="" />
+              <img src="img/lawwa-img/img-selection/our PBT Landing.JPG" alt="" />
               <h3 class="lawwa-blue" style="color: rgba(42,56,143,1);">Our PBT</h3>
               <p>
                 Our Personal Beauty Therapist are 1 of the best therapist. They are groomed and certified. If you are interested feel free to sign up as our Beauty Therapist. Be part of Lawwa.Asia now !
