--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -140,7 +140,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 p-0">
-                    <div class="about-pic set-bg" data-setbg="img/lawwa-img/makeup.jpg">
+                    <div class="about-pic set-bg" data-setbg="img/lawwa-img/img-selection/Recruitment1-Recruitment.jpg">
                         <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
     <!-- Team Section End -->
 
     <!-- Cta Section Begin -->
-    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/img-selection/Recruitment2newRecruitment.jpg" style="background-position: center center; background-size: cover; height: 100%;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
