--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -187,8 +187,9 @@
                   <section class="ad-banner">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-12" >
-                                <div class="ph-text set-bg" data-setbg="img/lawwa-img/festivebanner04.jpeg">
+
+                            <!-- <div class="col-lg-12" >
+                                <div class="ph-text set-bg" data-setbg="img/lawwa-img/plainbanner.jpeg">
                                     <h2>Join Today For Full Access To Our Services</h2>
                                     <p>
                                       <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
@@ -198,7 +199,18 @@
                                     </p>
                                     
                                 </div>
+                            </div> -->
+
+                            <div class="block">
+                              <div class="custom-ph-text">
+                                <h2 style="color: #FFF;">Join Today And Enjoy All Of Our Services</h2>
+                                  <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                                  class="cust-lawwa-gradient">
+                                  JOIN NOW
+                                </a>
                             </div>
+                          </div>
+
                         </div>
                     </div>
                 </section>
