--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -120,7 +120,7 @@
     <!-- Header End -->
 
     <!-- Portfolio Hero Section Begin -->
-    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/img-selection/profilebanner.jpg" style="height: 550px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -250,8 +250,7 @@
                         <img src="img/lawwa-img/DSC08050.jpg" alt="Img">
                     </div>
                 </div> -->
-
-                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/facial-alt.jpg">
+                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/img-selection/CeoSpeechProfiles.jpg">
                   <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
                     <i class="fa fa-play"></i>
                   </a>
@@ -260,7 +259,7 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="block">
                         <div class="section-title">
-                            <h3>CEO Speech Video...</h3>
+                            <h3>From Our CEO</h3>
                         </div>
                         <p>CEO text </p>
                     </div>
