--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -129,10 +129,12 @@
       </section>
       <br> -->
 
-      <div class="hero-wrap" style="background-image: url('img/lawwa-img/DSC08056-v2.jpg">
-        <div class="overlay"></div>
+      <div class="service-hero-wrap">
         <div class="container">
           <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
+            <!-- <div class="block">
+              <img src="img/lawwa-img/img-selection/ProductServicesCollage.jpeg">
+            </div> -->
             <!-- <div class="col-md-7 ftco-animate">
               <span class="subheading">Welcome</span>
               <h1 class="mb-4">To Your Personal Bueaty Solution</h1>
@@ -168,7 +170,7 @@
                 <div class="col-lg-9">
                     <div class="blog-item">
                         <div class="bi-pic col-10 col-sm-6 col-md-6">
-                            <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                            <img src="img/lawwa-img/img-selection/Facial -Services.jpg" alt="">
                         </div>
                         <div class="bi-text">
                             <h5>
@@ -181,7 +183,7 @@
                     </div>
                     <div class="blog-item">
                       <div class="bi-pic col-10 col-sm-6 col-md-6">
-                        <img src="img/lawwa-img/makeup-alt.jpg" alt="">
+                        <img src="img/lawwa-img/img-selection/Makeup - Services.jpg" alt="">
                       </div>
                       <div class="bi-text">
                           <h5>
@@ -194,7 +196,7 @@
                   </div>
                   <div class="blog-item">
                     <div class="bi-pic col-10 col-sm-6 col-md-6">
-                      <img src="img/lawwa-img/massage-alt.jpg" alt="">
+                      <img src="img/lawwa-img/img-selection/Massage - Services.JPG" alt="">
                     </div>
                     <div class="bi-text">
                         <h5>
@@ -207,7 +209,7 @@
                 </div>
                 <div class="blog-item">
                   <div class="bi-pic col-10 col-sm-6 col-md-6">
-                    <img src="img/lawwa-img/confinement-alt.jpg" alt="">
+                    <img src="img/lawwa-img/img-selection/Confinement - Services.JPG" alt="">
                   </div>
                   <div class="bi-text">
                       <h5>
@@ -220,7 +222,7 @@
               </div>
               <div class="blog-item">
                 <div class="bi-pic col-10 col-sm-6 col-md-6">
-                  <img src="img/lawwa-img/treatment-alt.jpg" alt="">
+                  <img src="img/lawwa-img/img-selection/Treatment - Services.jpg" alt="" >
                 </div>
                 <div class="bi-text">
                     <h5 style="color: rgba(42,56,143,1) !important;">
@@ -233,7 +235,7 @@
             </div>
             <div class="blog-item">
               <div class="bi-pic col-10 col-sm-6 col-md-6">
-                <img src="img/lawwa-img/add-on.jpeg" alt="">
+                <img src="img/lawwa-img/img-selection/Add-On - Services.JPG" alt="">
               </div>
               <div class="bi-text">
                   <h5>
