--- a/lawwa-web-revised/courses.html
+++ b/lawwa-web-revised/courses.html
@@ -172,13 +172,17 @@
                     <div class="block">
                         <div class="section-title">
                             <h3>Basic Courses</h3>
-                            <p>random text</p>
+                            <p>
+                              The Lawwa.Asia basic courses gurantees to cater for experienced and non experienced beauticiasn alike. 
+                              With our expert instructors, top-notch facilities and carefully designed syllabus, we will give you the 
+                              knowledge you need to become a confident personal beauty therapist here at Lawwa.Asia
+                            </p>
                         </div>
-                        <p>Target audience/Goal of the course? eg Beginner level introduction for inexperienced candidates</p>
-                        <p>Duration of the course?</p>
-                        <p>Platform to carry it out? Online, In seremban, KL</p>
-                        <p>theory/practical?</p>
-                        <p>example / snippet of course outline/syllabus?</p>
+                        <!-- <p>Course Details</p> -->
+                        <p>Required Experience: Beginner, Intermidiate, Advanced (Any) </p>
+                        <p>Duration: 3 Weeks</p>
+                        <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
+                        <p>Maximum Particpants: None</p>
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
@@ -226,9 +230,15 @@
                     <div class="block">
                         <div class="section-title">
                             <h3>Extended Courses</h3>
+                            <p>Are you ready to take it further to the next level? Lawwa.Asia extended courses include various 
+                              trainings to transform our great PBT to elites. Dig deeper into the understanding of beauty and learn 
+                              how to bring it out in your work for an even greater satisfaction for both you and the customer</p>
                         </div>
-                        <p>Extended course outline </p>
-                    </div>
+                        <p>Required Experience: Intermidiate, Advanced </p>
+                        <p>Duration: 1 Week</p>
+                        <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
+                        <p>Maximum Particpants: 15</p>
+                      </div>
                 </div><!-- .col-md-7 close -->
             </div>
         </div>
@@ -243,10 +253,15 @@
                   <div class="block">
                       <div class="section-title">
                           <h3>Other Courses</h3>
-                          <p>random text</p>
+                          <p>Lacking in a particular area? Why not spend some time to level up that specific skill. 
+                            Lawwa.Asia instructors are commited and ready to give you personalized coachings to get you the right 
+                            beauty skills needed to reach even greater heights in your career</p>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
-                  </div>
+                      <p>Required Experience: Beginner, Intermidiate, Advanced (Any)</p>
+                      <p>Duration: 1 Week - 3 Weeks</p>
+                      <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
+                      <p>Maximum Particpants: None</p>                  
+                    </div>
               </div><!-- .col-md-7 close -->
               <div class="col-md-5 col-sm-12">
                   <div class="block">
