--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -120,7 +120,7 @@
     <!-- Header End -->
 
     <!-- Portfolio Hero Section Begin -->
-    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/img-selection/profilebanner.jpg" style="height: 550px;">
+    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/img-selection/profilebanner.JPG" style="height: 550px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
