--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -140,7 +140,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 p-0">
-                    <div class="about-pic set-bg" data-setbg="img/lawwa-img/img-selection/Recruitment1-Recruitment.jpg">
+                    <div class="about-pic set-bg" data-setbg="img/lawwa-img/img-selection/Recruitment1-Recruitment.JPG">
                         <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
