--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -250,7 +250,7 @@
                         <img src="img/lawwa-img/DSC08050.jpg" alt="Img">
                     </div>
                 </div> -->
-                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/img-selection/CeoSpeechProfiles.jpg">
+                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/img-selection/CeoSpeechProfiles.JPG">
                   <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
                     <i class="fa fa-play"></i>
                   </a>
