--- a/lawwa-web-revised/confinement.html
+++ b/lawwa-web-revised/confinement.html
@@ -123,7 +123,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Confinement/Confinement-Confinement.JPG" width="1000px" height="500px">
           </div>
         </div>
       </section>
