--- a/lawwa-web-revised/recruitment.html
+++ b/lawwa-web-revised/recruitment.html
@@ -264,9 +264,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cta-text">
-                        <h2>Be Part Of The Lawwa.Asia family Now</h2>
-                        <p>Intertested In Building A Career With Us?
-                          <br /> Come Join Our Evergrowing Team And Get Started Right Away!</p>
+                        <h2>Be Part Of Lawwa.Asia Family </h2>
+                        <p>
+                          Intertested In Building A Career With Us? Come Join Our Evergrowing Team And Get Started Right Away!
+                        </p>
                         <a href="#" class="cust-lawwa-gradient">JOIN Today!</a>
                     </div>
                 </div>
