--- a/lawwa-web-revised/tips.html
+++ b/lawwa-web-revised/tips.html
@@ -45,7 +45,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -89,7 +90,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
