--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -157,22 +157,21 @@
                 </div>
               </div>
           </div>
-          <div class="carousel-item" style="max-height: 550px">
-            <img class="d-block w-100" src="img/lawwa-img/newbanner1LADH.jpg" alt="Second slide">
+          <div class="carousel-item"  style="max-height: 550px">
+            <img class="d-block w-100" src="img/lawwa-img/newbanner1LADH.jpg " alt="Second slide" >
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
                     <div class="custom-social">
-                        <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
                           </div>
                         </a>
                         <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
                         </a>
-                        <div></div>
                         <a href="#">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/twitter logo.png" />
@@ -188,17 +187,17 @@
               </div>
           </div>
           <div class="carousel-item"  style="max-height: 550px">
-            <img class="d-block w-100" src="img/lawwa-img/movingbanner.gif" alt="Third slide">
-            <div class="row" style="position: absolute; bottom: 0; margin-bottom: 10px;">
-              <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
-                <div class="custom-social">
+            <img class="d-block w-100" src="img/lawwa-img/movingbanner.gif " alt="Third slide" >
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
                       <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
                         <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/facebook logo.png" />
                           </div>
                         </a>
                         <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
-                          <div class="" style="max-width: 25px; max-height: 25px;">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
                         </a>
