--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -246,7 +246,7 @@
               </div>
           </div>
           <div class="carousel-item"  style="max-height: 550px">
-            <a href="https://laba.lawwa.asia">
+            <a href="https://laba.lawwa.asia" target="_blank">
             <img class="d-block w-100" src="img/lawwa-img/labaramadhan.jpg " alt="Fifth slide" style="max-height: 550px" >
             </a>
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
