--- a/lawwa-web-revised/academy.html
+++ b/lawwa-web-revised/academy.html
@@ -46,7 +46,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -103,7 +104,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
@@ -185,9 +187,9 @@
         <div class="row">
           <div class="col-lg-12">
               <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                  <h3>Lawwa.Asia Beauty Digitalisation Academy</h3>
-                  <span> The Lawwa Academy, transforms our chosen students into expert beauty therapists here at Lawwwa.Asia. 
-                    With our select courses and carefully refined cirrculum/syllabus we provide you with the theoretical and practical knowldege 
+                  <h3>Lawwa Asia Beauty Digitalisation Academy</h3>
+                  <span> At Lawwa Academy we transforms our students into expert beauty therapists. 
+                    With our select courses and carefully refined curriculum / syllabus we provide you with the theoretical and practical knowldege 
                     needed to be a professional beautician in the beauty industry. </span>
               </div>
           </div>
@@ -207,14 +209,14 @@
                           <div class="so-number">02</div>
                           <h5>Expert Instructions</h5>
                       </div>
-                      <p>Trained And Retrained. Our Instructors Are Highyl Qualified Professionals And Experts In Their Field, And Sicnerely Dedicated To Sharing Their Skills And Knwoeldge</p>
+                      <p>Trained And Retrained. Our Instructors Are Highly Qualified Professionals And Experts In Their Field, And Sincerely Dedicated To Sharing Their Skills And Knowledge</p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">03</div>
                           <h5>Beauty Theory/Concepts</h5>
                       </div>
-                      <p>Ready To Learn? Our Classroom Seessions Give Even Those With No Background Better Understand Of The Underlying Concepts That Make Up - Beauty, Wellbeing And The Lawwa.Asia Lifestyle</p>
+                      <p>Ready To Learn? Our Classroom Sessions Give Even Those With No Background Better Understand Of The Underlying Concepts That Make Up - Beauty, Wellbeing And The Lawwa Asia Lifestyle</p>
                   </div>
               </div>
               <div class="col-lg-6">
@@ -223,7 +225,7 @@
                           <div class="so-number">04</div>
                           <h5>Practicial Training</h5>
                       </div>
-                      <p>Building On The Basics, Our Candidates Are Passionately Trained To Uphold The Lawwa.Asia Status With Skills That Prove They Experts In The Beauty Industry</p>
+                      <p>Building On The Basics, Our Candidates Are Passionately Trained To Uphold The Lawwa Asia Status With Skills That Prove They Experts In The Beauty Industry</p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
