--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -46,7 +46,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -103,7 +104,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
@@ -164,7 +166,7 @@
                             <div class="ct-text">
                                 <h5>Give Us A Call:</h5>  
                                 <ul>
-                                    <li>+60 12 700 0107</li>
+                                    <li>+606 760 2229</li>
                                     <!-- <li>number 2</li> -->
                                 </ul>
                             </div>
@@ -177,7 +179,7 @@
                             </div>
                             <div class="ct-text">
                                 <h5>Send Us An Email:</h5>
-                                <a href="mailto:someone@lawwa.asia"><p>@lawwa.asia</p></a>
+                                <a href="mailto:sales@lawwa.asia"><p>sales@lawwa.asia</p></a>
                               </div>
                         </div>
                     </div>
