--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -46,7 +46,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -103,7 +104,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
@@ -185,7 +187,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
-                    <img src="img/lawwa-img/img-selection/Facial/signaturepigmentationtreatment.JPG" alt="">
+                    <img src="img/lawwa-img/img-selection/Facial/signature pigmentation treatment.JPG" alt="">
                     <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Pigmentation Treatment</h5>
                     <!-- <p>
                       Restore your skin natural glow & give instant brightening result after treatment that give smooth, supple and younger looking for pigmentation, rough skin and dull complexion problems. 
