--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -103,7 +103,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG" style="">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG" style="display: none;">
               </small>
             </div>
           </div>
