--- a/lawwa-web-revised/confinement.html
+++ b/lawwa-web-revised/confinement.html
@@ -46,7 +46,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -103,7 +104,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
@@ -138,7 +140,7 @@
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                     <h3>Confinement Services</h3>
                         <!-- <p>Lorem .</p> -->
-                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find 1 that  suit your mood now !</p>
+                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find one that  suit your mood now !</p>
                     </div>
                 </div>
             </div>
