--- a/lawwa-web-revised/courses.html
+++ b/lawwa-web-revised/courses.html
@@ -46,7 +46,8 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/>
+                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
+                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -103,7 +104,8 @@
             </div>
             <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
-                <img id="switch-lang" src="img/lawwa-img/lang-icon.jpg">
+                <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
             </div>
           </div>
@@ -181,8 +183,8 @@
                         <!-- <p>Course Details</p> -->
                         <p>Required Experience: Beginner, Intermidiate, Advanced (Any) </p>
                         <p>Duration: 3 Weeks</p>
-                        <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
-                        <p>Maximum Particpants: None</p>
+                        <p>Method Of Instructions: In House - Theoretical Classes, In House - Practical Classes</p>
+                        <p>Maximum Participants: None</p>
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
@@ -236,8 +238,8 @@
                         </div>
                         <p>Required Experience: Intermidiate, Advanced </p>
                         <p>Duration: 1 Week</p>
-                        <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
-                        <p>Maximum Particpants: 15</p>
+                        <p>Method Of Instructions: In House - Theoretical Classes, In House - Practical Classes</p>
+                        <p>Maximum Participants: 15</p>
                       </div>
                 </div><!-- .col-md-7 close -->
             </div>
@@ -259,8 +261,8 @@
                       </div>
                       <p>Required Experience: Beginner, Intermidiate, Advanced (Any)</p>
                       <p>Duration: 1 Week - 3 Weeks</p>
-                      <p>Method Of Instructions: In House - Theoritcal Classes, In House - Practical Classes</p>
-                      <p>Maximum Particpants: None</p>                  
+                      <p>Method Of Instructions: In House - Theoretical Classes, In House - Practical Classes</p>
+                      <p>Maximum Participants: None</p>                  
                     </div>
               </div><!-- .col-md-7 close -->
               <div class="col-md-5 col-sm-12">
