--- a/lawwa-web-revised/contact2.html
+++ b/lawwa-web-revised/contact2.html
@@ -131,8 +131,8 @@
                     <div class="row">
                         <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-6">
                             <div class="contact-text2">
-                                <h3>Get in touch</h3>
-                                <p>For Any Inquiries :-</p>
+                              <br>
+                                <h3>Reach out to us !</h3>
                                 <br>
                                 <div class="ct-item">
                                     <div class="ct-icon">
@@ -162,14 +162,14 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="ct-item" float="right">
+                                <div class="ct-item">
                                     <div class="ct-icon" style="background-image: linear-gradient(60deg, rgba(217,55,104,1), rgba(42,56,143,1));" float="right">
                                         <i class="fa fa-mobile"></i>
                                     </div>
                                     <div class="ct-text" float="right">
                                         <h5>Give Us A Call:</h5>  
                                         <ul>
-                                            <li>+60 12 700 0107</li>
+                                            <li>+06 760 2229</li>
                                             <!-- <li>number 2</li> -->
                                         </ul>
                                     </div>
@@ -182,7 +182,7 @@
                                     </div>
                                     <div class="ct-text">
                                         <h5>Send Us An Email:</h5>
-                                        <a href="mailto:someone@lawwa.asia"><p>@lawwa.asia</p></a>
+                                        <a href="mailto:sales@lawwa.asia"><p>sales@lawwa.asia</p></a>
                                       </div>
                                 </div>
                             </div>
